# watchahack

./: .gitignore  CLAUDE.md  README.md  cortex
london-cortex/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  __init__.py  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
london-cortex/agents/: base.py  brain.py  chronicler.py  connectors.py  curiosity.py  discovery.py  explorers.py  interpreters.py  investigator.py  validator.py  web_searcher.py
london-cortex/core/: board.py  claude_runner.py  config.py  coordinator.py  daemon.py  dashboard.py  epistemics.py  graph.py  image_store.py  llm.py  locations.py  memory.py  models.py  retina.py  scheduler.py  utils.py
london-cortex/frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
london-cortex/ingestors/: acled_protests.py  air_quality.py  apm.py  base.py  bbc_london_news.py  breathe_london.py  bt_footfall.py  bus_avl.py  bus_crowding.py  cloud_provider_status.py  cloudflare_radar.py  commodities.py  commuter_displacement.py  companies_house.py  corporate_hq.py  court_judgments.py  crowd_density.py  cycle_hire.py  cycle_rebalancing.py  data_lineage.py  data_quality.py  electricity_prices.py  elexon_remit.py  embedded_generation.py  energy.py  environment.py  events.py  financial.py  flickr_geo_media.py  flight_tracker.py  gdelt_discourse.py  gdelt_events.py  gla_events.py  gla_press.py  google_air_quality.py  gov_notices.py  gov_press.py  grid_demand.py  grid_forecast.py  grid_generation.py  (+70 more)
london-cortex/static/: dashboard.html  (+1 more)
(+33 files in other folders)
