[project]
name = "london-cortex"
version = "1.0.0"
description = "London Cortex — autonomous city intelligence"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "networkx>=3.2",
    "google-genai>=1.0",
    "httpx>=0.27",
    "yfinance>=0.2",
    "scipy>=1.12",
    "numpy>=1.26",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "rasterio>=1.3",
    "shapely>=2.0",
    "python-dotenv>=1.0",
    "stomp.py>=8.1",
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
